some changes but contact item with service doesn`t work

--- a/src/app/contact-item/contact-item.component.html
+++ b/src/app/contact-item/contact-item.component.html
@@ -1,18 +1,18 @@
 <li class="collection-item">
   <div>
     <a href >
-      <span *ngFor="let contactFromServer of contacts">{{contactFromServer.name}} {{contactFromServer.lastName}}</span>
+      <span *ngFor="let contactFromServer of contacts">{{contactFromServer.name}}
+        {{contactFromServer.lastName}}</span>
     </a>
     <span class="secondary-content">
-      <a href>
+      <a >
         <i class="material-icons teal-text text-darken-1">create</i></a>
-      <a href>
+      <a >
         <i class="material-icons  deep-orange-text text-darken-1">delete</i>
       </a>
     </span>
   </div>
 </li>
-
 
 
 
