--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -1,7 +1,6 @@
 <form class="row" id="contact-form">
   <div class="col s1">
-    <button class="col s12 waves-effect waves-light btn blue darken-1" [class.hide]="!isAddingState"
-            (click)="onClickAdd()">
+    <button class="col s12 waves-effect waves-light btn blue darken-1"  (click)="onClickAdd()" [class.hide]="!isAddingState">
       Add
     </button>
     <button class="col s12 waves-effect waves-light btn blue darken-1" (click)="onClickGetAll()">
