added contact-event component? changed methods event and remove with http client.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
 <app-contact-form></app-contact-form>
 <div class="row">
   <ul class="collection with-header" id="contact-wrapper">
-    <app-contact-item *ngFor="let contact of contacts" [contacts]="contact"></app-contact-item>
+    <app-contact-item *ngFor="let contact of contactService.getContacts() | async"
+                      [contact]="contact">
+    </app-contact-item>
   </ul>
 </div>
